--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_marginEnd="35dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="50dp"
+        android:enabled="false"
         android:text="@string/tip_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -29,8 +30,8 @@
         android:layout_marginStart="35dp"
         android:layout_marginTop="50dp"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="@string/text_field"
+        android:inputType="numberDecimal"
+        android:hint="@string/tip_text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/button"
         app:layout_constraintStart_toStartOf="parent"
